--- a/money.html
+++ b/money.html
@@ -18,14 +18,77 @@
   integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
   </head>
   <body>
-<div >
   <h1>Find the coins by Akanksha Mamidiga</h1>
- 
   <div  style="background-color: antiquewhite;">Click on the locations to find coins, beware the monster</div>
   <div id="locations" class=" bg-success">Number of locations checked is zero</div>
   <div id="score"  style="background-color:lavenderblush;">Score is zero</div>
   <div class=" bg-warning" onclick="help()">Click for help.</div>
   <div id="help"  style="background-color:blanchedalmond" onclick="help()">Help report</div>
 </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-2 img-thumbnail"><img src="building.jpg" id="Image01" width="80" height="80"></div>
+    <div class="col-md-2 img-thumbnail"><img src="building.jpg" id="Image02" width="80" height="80"></div>
+    <div class="col-sm-2 img-thumbnail"><img src="building.jpg" id="Image03" width="80" height="80"></div>
+    <div class="col-sm-2 img-thumbnail"><img src="building.jpg" id="Image04" width="80" height="80"></div>
+    <div class="col-sm-2 img-thumbnail"><img src="building.jpg" id="Image05" width="80" height="80"></div>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-2 img-thumbnail"><img src="building.jpg" id="Image01" width="80" height="80"></div>
+    <div class="col-md-2 img-thumbnail"><img src="building.jpg" id="Image02" width="80" height="80"></div>
+    <div class="col-sm-2 img-thumbnail"><img src="building.jpg" id="Image03" width="80" height="80"></div>
+    <div class="col-sm-2 img-thumbnail"><img src="building.jpg" id="Image04" width="80" height="80"></div>
+    <div class="col-sm-2 img-thumbnail"><img src="building.jpg" id="Image05" width="80" height="80"></div>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-2 img-thumbnail"><img src="building.jpg" id="Image01" width="80" height="80"></div>
+    <div class="col-md-2 img-thumbnail"><img src="building.jpg" id="Image02" width="80" height="80"></div>
+    <div class="col-sm-2 img-thumbnail"><img src="building.jpg" id="Image03" width="80" height="80"></div>
+    <div class="col-sm-2 img-thumbnail"><img src="building.jpg" id="Image04" width="80" height="80"></div>
+    <div class="col-sm-2 img-thumbnail"><img src="building.jpg" id="Image05" width="80" height="80"></div>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-2 img-thumbnail"><img src="building.jpg" id="Image01" width="80" height="80"></div>
+    <div class="col-md-2 img-thumbnail"><img src="building.jpg" id="Image02" width="80" height="80"></div>
+    <div class="col-sm-2 img-thumbnail"><img src="building.jpg" id="Image03" width="80" height="80"></div>
+    <div class="col-sm-2 img-thumbnail"><img src="building.jpg" id="Image04" width="80" height="80"></div>
+    <div class="col-sm-2 img-thumbnail"><img src="building.jpg" id="Image05" width="80" height="80"></div>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-2 img-thumbnail"><img src="building.jpg" id="Image01" width="80" height="80"></div>
+    <div class="col-md-2 img-thumbnail"><img src="building.jpg" id="Image02" width="80" height="80"></div>
+    <div class="col-sm-2 img-thumbnail"><img src="building.jpg" id="Image03" width="80" height="80"></div>
+    <div class="col-sm-2 img-thumbnail"><img src="building.jpg" id="Image04" width="80" height="80"></div>
+    <div class="col-sm-2 img-thumbnail"><img src="building.jpg" id="Image05" width="80" height="80"></div>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-2 img-thumbnail"><img src="building.jpg" id="Image01" width="80" height="80"></div>
+    <div class="col-md-2 img-thumbnail"><img src="building.jpg" id="Image02" width="80" height="80"></div>
+    <div class="col-sm-2 img-thumbnail"><img src="building.jpg" id="Image03" width="80" height="80"></div>
+    <div class="col-sm-2 img-thumbnail"><img src="building.jpg" id="Image04" width="80" height="80"></div>
+    <div class="col-sm-2 img-thumbnail"><img src="building.jpg" id="Image05" width="80" height="80"></div>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-2 img-thumbnail"><img src="building.jpg" id="Image01" width="80" height="80"></div>
+    <div class="col-md-2 img-thumbnail"><img src="building.jpg" id="Image02" width="80" height="80"></div>
+    <div class="col-sm-2 img-thumbnail"><img src="building.jpg" id="Image03" width="80" height="80"></div>
+    <div class="col-sm-2 img-thumbnail"><img src="building.jpg" id="Image04" width="80" height="80"></div>
+    <div class="col-sm-2 img-thumbnail"><img src="building.jpg" id="Image05" width="80" height="80"></div>
+  </div>
+</div>
 </body>
 </html>
+
